--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -12,9 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
+        android:autofillHints=""
         android:ems="10"
-        android:hint="Email "
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
+        android:textColorHint="#795548"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:onClick="ResetButton"
-        android:text="Reset Password"
+        android:text="@string/reset_password"
         android:backgroundTint="@color/buttonBrown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
