--- a/app/src/main/res/layout/fragment_one_card.xml
+++ b/app/src/main/res/layout/fragment_one_card.xml
@@ -6,11 +6,10 @@
     tools:context=".OneCardFragment"
     android:background="@color/backgroundBeige">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="11111111" />
+        android:layout_height="match_parent" />
 
 
 </FrameLayout>
