one card picking interface design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="backgroundBeige">#8F8B80</color>
     <color name="buttonBrown">#5E514B</color>
+    <color name="Beige">#fff2e2</color>
 </resources>
