--- a/app/src/main/res/layout/fragment_one_card.xml
+++ b/app/src/main/res/layout/fragment_one_card.xml
@@ -11,30 +11,44 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="116dp"
-        android:layout_height="211dp"
-        android:layout_marginTop="150dp"
-        android:src="@drawable/lovegoth"
+        android:id="@+id/CardImage"
+        android:layout_width="139dp"
+        android:layout_height="239dp"
+        android:layout_marginTop="125dp"
+        android:src="@drawable/card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/PickACardButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="48dp"
+        android:backgroundTint="@color/buttonBrown"
+        android:text="@string/lucky"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:text="Pick a card"
-        android:backgroundTint="@color/buttonBrown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/HowToText" />
+
+    <TextView
+        android:id="@+id/HowToText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="@string/pick_a_card_text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/CardImage" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
