--- a/app/src/main/res/layout/fragment_one_card.xml
+++ b/app/src/main/res/layout/fragment_one_card.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="48dp"
         android:backgroundTint="@color/buttonBrown"
         android:text="@string/lucky"
-        android:textColor="@color/black"
+        android:textColor="@color/Beige"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
