--- a/app/src/main/res/layout/fragment_theme_of_tarot.xml
+++ b/app/src/main/res/layout/fragment_theme_of_tarot.xml
@@ -14,6 +14,7 @@
         android:layout_width="111dp"
         android:layout_height="189dp"
         android:layout_marginStart="20dp"
+        android:onClick="GeneralTheme"
         android:src="@drawable/general"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/GeneralThemeText" />
@@ -22,6 +23,7 @@
         android:id="@+id/LoveImageView"
         android:layout_width="123dp"
         android:layout_height="190dp"
+        android:onClick="LoveTheme"
         android:src="@drawable/lovet"
         app:layout_constraintEnd_toStartOf="@+id/CareerImageView"
         app:layout_constraintStart_toEndOf="@+id/GeneralImageView"
@@ -32,6 +34,7 @@
         android:layout_width="116dp"
         android:layout_height="192dp"
         android:layout_marginEnd="20dp"
+        android:onClick="CareerTheme"
         android:src="@drawable/job"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CareerThemeText" />
@@ -43,6 +46,7 @@
         android:layout_marginTop="20dp"
         android:text="@string/select_a_theme"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="20sp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,6 +95,7 @@
         android:layout_marginTop="40dp"
         android:backgroundTint="@color/buttonBrown"
         android:text="@string/get_reading"
+        android:textColor= "@color/Beige"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LoveImageView" />
@@ -99,7 +104,7 @@
         android:id="@+id/imageView"
         android:layout_width="143dp"
         android:layout_height="120dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/fortuneteller"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
