--- a/app/src/main/res/layout/fragment_celtic_cross.xml
+++ b/app/src/main/res/layout/fragment_celtic_cross.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    >
+<androidx.constraintlayout.widget.ConstraintLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CelticCrossFragment">
+    tools:context=".CelticCrossFragment"
+    android:background="@color/backgroundBeige">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
