--- a/app/src/main/res/layout/fragment_one_card.xml
+++ b/app/src/main/res/layout/fragment_one_card.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    >
+<androidx.constraintlayout.widget.ConstraintLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".OneCardFragment"
@@ -20,7 +23,7 @@
         android:layout_width="139dp"
         android:layout_height="239dp"
         android:layout_marginTop="125dp"
-        android:src="@drawable/card"
+        android:src="@drawable/lovegoth"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -50,5 +53,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CardImage" />
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
