--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,36 +10,36 @@
         android:name="com.leys.arcana.ThreeCardFragment"
         android:label="fragment_three_card"
         tools:layout="@layout/fragment_three_card" >
-        <argument
-            android:name="cardNumber"
-            app:argType="integer" />
+        <action
+            android:id="@+id/action_threeCardFragment_to_themeOfTarotFragment"
+            app:destination="@id/themeOfTarotFragment" />
     </fragment>
     <fragment
         android:id="@+id/sevenCardFragment"
         android:name="com.leys.arcana.SevenCardFragment"
         android:label="fragment_seven_card"
         tools:layout="@layout/fragment_seven_card" >
-        <argument
-            android:name="cardNumber"
-            app:argType="integer" />
+        <action
+            android:id="@+id/action_sevenCardFragment_to_themeOfTarotFragment"
+            app:destination="@id/themeOfTarotFragment" />
     </fragment>
     <fragment
         android:id="@+id/celticCrossFragment"
         android:name="com.leys.arcana.CelticCrossFragment"
         android:label="fragment_celtic_cross"
         tools:layout="@layout/fragment_celtic_cross" >
-        <argument
-            android:name="cardNumber"
-            app:argType="integer" />
+        <action
+            android:id="@+id/action_celticCrossFragment_to_themeOfTarotFragment"
+            app:destination="@id/themeOfTarotFragment" />
     </fragment>
     <fragment
         android:id="@+id/fiveCardFragment"
         android:name="com.leys.arcana.FiveCardFragment"
         android:label="fragment_five_card"
         tools:layout="@layout/fragment_five_card" >
-        <argument
-            android:name="cardNumber"
-            app:argType="integer" />
+        <action
+            android:id="@+id/action_fiveCardFragment_to_themeOfTarotFragment"
+            app:destination="@id/themeOfTarotFragment" />
     </fragment>
     <fragment
         android:id="@+id/homePageFragment"
@@ -70,17 +70,25 @@
         android:name="com.leys.arcana.HorseShoeFragment"
         android:label="fragment_horse_shoe"
         tools:layout="@layout/fragment_horse_shoe" >
-        <argument
-            android:name="cardNumber"
-            app:argType="integer" />
+        <action
+            android:id="@+id/action_horseShoeFragment_to_themeOfTarotFragment"
+            app:destination="@id/themeOfTarotFragment" />
     </fragment>
     <fragment
         android:id="@+id/oneCardFragment"
         android:name="com.leys.arcana.OneCardFragment"
         android:label="fragment_one_card"
         tools:layout="@layout/fragment_one_card" >
+        <action
+            android:id="@+id/action_oneCardFragment_to_themeOfTarotFragment"
+            app:destination="@id/themeOfTarotFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/themeOfTarotFragment"
+        android:name="com.leys.arcana.ThemeOfTarotFragment"
+        android:label="ThemeOfTarotFragment" >
         <argument
-            android:name="cardNumber"
+            android:name="howManyCards"
             app:argType="integer" />
     </fragment>
 </navigation>
