--- a/app/src/main/res/layout/fragment_three_card.xml
+++ b/app/src/main/res/layout/fragment_three_card.xml
@@ -13,15 +13,59 @@
         android:background="@color/backgroundBeige"
         tools:context=".ThreeCardFragment">
 
+        <Button
+            android:id="@+id/pickACardButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="75dp"
+            android:backgroundTint="@color/buttonBrown"
+            android:text="@string/lucky"
+            android:textColor="@color/Beige"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/howToText" />
 
         <TextView
-            android:id="@+id/textView"
-            android:layout_width="43dp"
-            android:layout_height="46dp"
-            android:layout_marginStart="157dp"
-            android:layout_marginTop="253dp"
-            android:text="3"
+            android:id="@+id/howToText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="75dp"
+            android:text="@string/pick_a_card_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="#000000"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="150dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/cardImageView1"
+                android:layout_width="124dp"
+                android:layout_height="139dp"
+                app:srcCompat="@drawable/lovegoth" />
+
+            <ImageView
+                android:id="@+id/cardImageView3"
+                android:layout_width="124dp"
+                android:layout_height="139dp"
+                app:srcCompat="@drawable/lovegoth" />
+
+            <ImageView
+                android:id="@+id/cardImageView2"
+                android:layout_width="124dp"
+                android:layout_height="139dp"
+                app:srcCompat="@drawable/lovegoth" />
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
