--- a/app/src/main/res/layout/fragment_seven_card.xml
+++ b/app/src/main/res/layout/fragment_seven_card.xml
@@ -12,15 +12,103 @@
         android:background="@color/backgroundBeige"
         tools:context=".SevenCardFragment">
 
-
-        <TextView
-            android:id="@+id/textView2"
+        <Button
+            android:id="@+id/pickACardButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="290dp"
-            android:layout_marginEnd="111dp"
-            android:text="7"
+            android:layout_marginBottom="150dp"
+            android:backgroundTint="@color/buttonBrown"
+            android:text="@string/lucky"
+            android:textColor="@color/Beige"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/howToText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:text="@string/pick_a_card_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="#000000"
+            app:layout_constraintBottom_toTopOf="@+id/pickACardButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/linearLayoutAllTogether"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/howToText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <LinearLayout
+                android:id="@+id/linearLayoutLeft3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/cardImage4"
+                    android:layout_width="75dp"
+                    android:layout_height="125dp"
+                    android:src="@drawable/lovegoth" />
+
+                <ImageView
+                    android:id="@+id/cardImage3"
+                    android:layout_width="75dp"
+                    android:layout_height="125dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp"
+                    android:src="@drawable/lovegoth" />
+
+                <ImageView
+                    android:id="@+id/cardImage2"
+                    android:layout_width="75dp"
+                    android:layout_height="125dp"
+                    android:src="@drawable/lovegoth" />
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/cardImage1"
+                android:layout_width="75dp"
+                android:layout_height="125dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:src="@drawable/lovegoth" />
+
+            <LinearLayout
+                android:id="@+id/linearLayoutRight3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/cardImage7"
+                    android:layout_width="75dp"
+                    android:layout_height="125dp"
+                    android:src="@drawable/lovegoth" />
+
+                <ImageView
+                    android:id="@+id/cardImage6"
+                    android:layout_width="75dp"
+                    android:layout_height="125dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginBottom="30dp"
+                    android:src="@drawable/lovegoth" />
+
+                <ImageView
+                    android:id="@+id/cardImage5"
+                    android:layout_width="75dp"
+                    android:layout_height="125dp"
+                    android:src="@drawable/lovegoth" />
+            </LinearLayout>
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
